# spectral-compress

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get_spectral_exr_samples.sh
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt
apps/compress/: CMakeLists.txt  cmd_constraints.cpp  cmd_constraints.h  main.cpp  stats.cpp  stats.h
apps/compress-twobounds/: CMakeLists.txt  main.cpp
apps/compress-upperbound/: CMakeLists.txt  main.cpp
apps/decompress/: CMakeLists.txt  main.cpp
apps/decompress-twobounds/: CMakeLists.txt  main.cpp
apps/decompress-upperbound/: CMakeLists.txt  main.cpp
apps/export-layers/: CMakeLists.txt  main.cpp
apps/test/: CMakeLists.txt
apps/test/export-layers/: CMakeLists.txt
apps/test/exr-attributes/: CMakeLists.txt  main.cpp
apps/test/exr-layers/: CMakeLists.txt  main.cpp
apps/test/jxl/: CMakeLists.txt  main.cpp
apps/test/jxl-limits/: CMakeLists.txt  main.cpp
apps/test/jxl-tests/: CMakeLists.txt  main.cpp
apps/test/lossless/: CMakeLists.txt  main.cpp
apps/test/misc-tests/: CMakeLists.txt  data.h  main.cpp
apps/test/quantization/: CMakeLists.txt  main.cpp
apps/test/spectrum-moments/: CMakeLists.txt  main.cpp
apps/test/stupid-compress/: CMakeLists.txt  main.cpp
apps/test/stupid-decompress/: main.cpp
apps/tools/: CMakeLists.txt
apps/tools/cave-exr/: CMakeLists.txt  main.cpp
apps/tools/cave-to-exr/: CMakeLists.txt  main.cpp
apps/tools/decompress-chroma/: CMakeLists.txt  main.cpp
apps/tools/decompress-chrominance/: CMakeLists.txt  main.cpp
apps/tools/envi-exr/: CMakeLists.txt  main.cpp
apps/tools/envi-to-exr/: CMakeLists.txt  main.cpp
apps/tools/eval-quantization/: CMakeLists.txt  main.cpp
apps/tools/export-layers/: CMakeLists.txt  main.cpp
apps/tools/exr-change-compression/: CMakeLists.txt  main.cpp
apps/tools/exr-diff/: CMakeLists.txt  main.cpp
apps/tools/exr-dump-extract/: CMakeLists.txt  main.cpp
apps/tools/exr-peek-spectrum/: CMakeLists.txt  main.cpp
apps/tools/exr-pfm/: CMakeLists.txt  main.cpp
apps/tools/exr-png/: CMakeLists.txt  main.cpp
apps/tools/exr-strip-rgb/: CMakeLists.txt  main.cpp
apps/tools/generate-macbeth-img/: CMakeLists.txt  main.cpp
apps/tools/jxl-dump-extract/: CMakeLists.txt  main.cpp
apps/tools/quantization-from-image/: CMakeLists.txt  illuminant_data.h  main.cpp
apps/tools/sgeg-min-max/: CMakeLists.txt  main.cpp
apps/tools/simple-compress/: CMakeLists.txt  main.cpp
apps/tools/simple-decompress/: CMakeLists.txt  main.cpp
apps/tools/stupid-compress/: main.cpp
apps/tools/stupid-decompress/: CMakeLists.txt  main.cpp
apps/tools/temp-diff/: CMakeLists.txt  main.cpp
apps/tools/validate-image/: CMakeLists.txt  main.cpp
apps/validate-image/: CMakeLists.txt  main.cpp
data/RIT/: CIBA11.BFC  CIBA11.SI_  CIBA12.SI_  CIPLAW10.SI_  CIPLAW8.BFC  CIPLAW8.SI_  CIPLAW9.BFC  CIPLAW9.SI_  GOLF.BFC  GOLF.SI_  GOLFORA.BFC  GOLFORA.SI_  GOLFYE.BFC  GOLFYE.SI_  HERPIBLU.BFC  HERPIBLU.SI_  HERPICER.SI_  HERPICHA.BFC  HERPICHA.SI_  HERPIGRE.BFC  HERPIGRE.SI_  HERPIMAG.BFC  HERPIMAG.SI_  HERPIORA.SI_  HERPIORE.BFC  HERPIORE.SI_  HERPIOYE.BFC  HERPIOYE.SI_  HERPIPIN.BFC  HERPIPIN.SI_  HERPIRED.BFC  HERPIRED.SI_  INCWHITE.BFC  INCWHITE.SI_  IXAXOR2.SI_  IXCATAN.BFC  IXCATAN.SI_  IXCAXORA.BFC  IXCAXORA.SI_  IXCAXPGR.BFC  (+238 more)
data/RIT/bcraday01/: BCRBK1WR.BFC  BCRBK1WR.SI_  BCRBL1WR.BFC  BCRBL1WR.SI_  BCRBLL1W.BFC  BCRBLL1W.SI_  BCRGD1WR.BFC  BCRGD1WR.SI_  BCRGL1WR.BFC  BCRGL1WR.SI_  BCRGM1WR.BFC  BCRGM1WR.SI_  BCRGR1WR.BFC  BCRGR1WR.SI_  BCRGR2WR.BFC  BCRGR2WR.SI_  BCROR1WR.BFC  BCROR1WR.SI_  BCROR2WR.BFC  BCROR2WR.SI_  BCRPI1WR.BFC  BCRPI1WR.SI_  BCRRE1WR.BFC  BCRRE1WR.SI_  BCRWH1WO.BFC  BCRWH1WO.SI_  BCRWH2WO.BFC  BCRWH2WO.SI_  BCRWH3WO.BFC  BCRWH3WO.SI_  BCRWH4WO.BFC  BCRWH4WO.SI_  BCRWH5WO.BFC  BCRWH5WO.SI_  BCRYE1WR.BFC  BCRYE1WR.SI_
data/RIT/bcraday02/: BCRBD1WO.BFC  BCRBD1WO.SI_  BCRBD2WO.BFC  BCRBD2WO.SI_  BCRBD3WO.BFC  BCRBD3WO.SI_  BCRBD4WO.BFC  BCRBD4WO.SI_  (+24 more)
experiments/: benchmark_compression.py  bonn_report.py  bonn_to_exr.py  cave_report.py  cave_to_exr.py  common.py  compress_bonn.py  compress_cave.py  plot_avg_curves.py  plot_chart.py  plot_err.py  report.py  report_bonn.py  report_cave.py  run_err.py  run_err_bonn.py  run_err_cave.py
experiments/export/: introduction.tex  main.tex  mat_template.tex  mat_template_bonn.tex  mat_template_cave.tex  prefix_bonn.tex  prefix_bonn_2.tex  prefix_cave.tex  prefix_cave_2.tex  supplemental.tex
experiments/openexr/: spectralexr.py
experiments/radiometry/: cmf.py  colortools.py  fluospectrum.py
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  EXRArrayStream.cpp  EXRArrayStream.h  EXRImage.cpp  EXRImage.h  EXRSpectralImage.cpp  EXRSpectralImage.h  EXRUtils.cpp  EXRUtils.h  JXLImage.cpp  JXLImage.h  SGEGBox.cpp  SGEGBox.h  SGEG_box.h  SpectrumConverter.cpp  SpectrumConverter.h  Util.cpp  Util.h  curve_compression.cpp  curve_compression.h  curve_quantization.cpp  curve_quantization.h  jxlcompression.cpp  moments.cpp  moments.h  moments_error.cpp  moments_error.h  moments_image.cpp  moments_image.h  quantization.cpp  quantization.h  spectral_compression_type.h  spectral_data.h
lib/moments/: CMakeLists.txt  JXLImage.cpp  JXLImage.h  SGEG_box.cpp  SGEG_box.h  moments.cpp  moments.h  moments_image.cpp  moments_image.h
python/: Compression Pipeline.ipynb  Fluorescence.ipynb  Quantization.ipynb  bonn_to_exr.py  compare_arrays.py  gen_all_illu.py  test_moments.py  testing.py
python/compress/: moments.py  quantization.py  util.py
python/openexr/: spectralexr.py
python/radiometry/: cmf.py
python/test_data/: sample_spectra.py
scripts/: bonn_to_exr.py
supplemental/: benchmark_compression.py  bonn_report.py  bonn_strip_rgb.py  cave_compress.py  cave_report.py  cave_strip_rgb.py  common.py
supplemental/export/: introduction.tex  mat_template.tex  prefix_bonn.tex  prefix_cave.tex  scale.tex  supplemental.tex
supplemental/radiometry/: spectrum.py
tests/: CMakeLists.txt  moment_test.cpp  moment_test_data.h  spectral_data.h  spectrumconverter_test.cpp  util_test.cpp  util_test_data.h
(+380 files in other folders)
