# add_subdirectory(spectrum-moments)
# add_subdirectory(jxl)
# add_subdirectory(lossless)
# # add_subdirectory(exr-layers)
# # add_subdirectory(exr-attributes)
# add_subdirectory(stupid-compress)
# add_subdirectory(stupid-decompress)
# add_subdirectory(export-layers)
# add_subdirectory(validate-image)
add_subdirectory(quantization)
# add_subdirectory(misc-tests)